<resources>
    <string name="app_name">Trip Management</string>
    <string name="update_expense">UPDATE EXPENSE</string>
    <string name="type">Type</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="comment">Comment</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="filter_for_search_results">FILTER FOR SEARCH RESULTS</string>
    <string name="risk_assessment">Risk Assessment</string>
    <string name="from">From:</string>
    <string name="start_date">Start Date</string>
    <string name="to">To:</string>
    <string name="due_date">Due Date</string>
    <string name="ok">OK</string>
    <string name="update_the_trip">UPDATE THE TRIP</string>
    <string name="name">Name</string>
    <string name="destination">Destination</string>
    <string name="description">Description</string>
    <string name="require_risk_assessment">Require risk assessment?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm">CONFIRM</string>
    <string name="confirm_name">Name:</string>
    <string name="confirm_destination">Destination:</string>
    <string name="confirm_date">Date:</string>
    <string name="confirm_description">Description:</string>
    <string name="confirm_risk_assessment">Risk assessment:</string>
    <string name="add_a_trip">ADD A TRIP</string>
    <string name="add">ADD</string>
    <string name="add_an_expense">ADD AN EXPENSE</string>
    <string name="trips">Trips</string>
    <string name="add_filter">Add filter</string>
    <string name="no_trips_have_been_recorded_add_one">No trips have been recorded. Add one !</string>
    <string name="no_data_found">No data found</string>
    <string name="no_data_found_sub">Try searching another name and checking your filter</string>
    <string name="delete_all">Delete All</string>
    <string name="trip_info">Trip Info</string>
    <string name="trip_name">TRIP NAME</string>
    <string name="destination_cap">DESTINATION</string>
    <string name="date_cap">DATE</string>
    <string name="risk_assessment_cap">RISK ASSESSMENT</string>
    <string name="description_cap">DESCRIPTION</string>
    <string name="expense">Expense</string>
    <string name="add_an_expense_no_cap">Add an expense</string>
    <string name="search_by_trip_name">Search by trip name</string>
    <string name="search_by_trip_destination">Search by trip destination</string>
    <string name="fill_all_the_required_fields">Please fill all the required fields</string>
    <string name="search_by">Search by</string>
    <string name="add_trip_successfully">Add new trip successfully!!</string>
    <string name="add_trip_failed">Add new trip failed!!</string>
    <string name="update_trip_successfully">Update trip successfully!!</string>
    <string name="update_trip_failed">Update trip failed!!</string>
    <string name="delete_the_trip">Delete the trip</string>
    <string name="confirm_delete_the_trip">Are you sure you want to delete this trip?</string>
    <string name="delete_trip_successfully">Delete successfully</string>
    <string name="delete_trip_failed">Delete failed</string>
    <string name="delete_all_trips">Delete all the trips</string>
    <string name="confirm_delete_all_trips">Are you sure you want to delete all the trips?</string>
    <string name="pound">£ %1$d</string>
    <string name="delete_the_expense">Delete the expense</string>
    <string name="confirm_delete_expense">Are you sure you want to delete this expense?</string>
    <string name="delete_expense_successfully">Delete successfully</string>
    <string name="delete_expense_failed">Delete failed</string>
    <string name="update_expense_successfully">Update expense successfully!!</string>
    <string name="update_expense_failed">Update expense failed!!</string>
</resources>